SERVER-94625 Return '""_sd' instead of 'StringData()' in 'getSubstringCP()' (#26878)

GitOrigin-RevId: b9ed005abb6520e24db3a34aef10da096497548d